# MVCExcercises

./: .gitignore  CMakeList.txt  CMakeLists.txt  tolstenko_l_s.sln
prj.test/: CMakeLists.txt
prj.test/catch2/: catch.h
prj.test/catch2_complex/: CMakeLists.txt  catch2_complex.vcxproj
prj.test/catch2_dynarray/: CMakeLists.txt  catch2_dynarray.cpp  catch2_dynarray.vcxproj  catch2_dynarray.vcxproj.filters
prj.test/catch2_dynarrayt/: CMakeLists.txt  catch2_dynarrayt.cpp  catch2_dynarrayt.vcxproj  catch2_dynarrayt.vcxproj.filters
prj.test/catch2_longint/: CMakeLists.txt  catch2_longint.vcxproj  catch2_longint.vcxproj.filters
prj.test/catch2_matrixa/: CMakeLists.txt  catch2_matrixa.cpp  catch2_matrixa.vcxproj  catch2_matrixa.vcxproj.filters
prj.test/catch2_matrixl/: CMakeLists.txt  catch2_matrixl.cpp  catch2_matrixl.vcxproj  catch2_matrixl.vcxproj.filters
prj.test/catch2_queuea/: CMakeLists.txt  catch2_queuea.cpp  catch2_queuea.vcxproj  catch2_queuea.vcxproj.filters
prj.test/catch2_queuel/: CMakeLists.txt  catch2_queuel.cpp  catch2_queuel.vcxproj  catch2_queuel.vcxproj.filters
prj.test/catch2_rational/: CMakeLists.txt  catch2_rational.cpp  catch2_rational.vcxproj
prj.test/catch2_stacka/: CMakeLists.txt  catch2_stacka.cpp  catch2_stacka.vcxproj  catch2_stacka.vcxproj.filters
prj.test/catch2_stackl/: CMakeLists.txt  catch2_stackl.cpp  catch2_stackl.vcxproj  catch2_stackl.vcxproj.filters
prj.test/test_complex/: CMakeLists.txt  catch2_complex.cpp  test_complex.cpp  test_complex.vcxproj  test_complex.vcxproj.filters
prj.test/test_longint/: test_longint.cpp  (+2 more)
(+104 files in other folders)
